--- a/src/locales/i18n/ru_RU.json
+++ b/src/locales/i18n/ru_RU.json
@@ -12,7 +12,10 @@
     "Portfolio": "Мои инвестиции",
     "Stats": "Статистика",
     "Favourite": "Отмеченные ICO",
-    "login": "Войти"
+    "login": "Войти",
+    "userPolicy": "Условия использования",
+    "confident":"Политика конфиденциальности",
+    "advert":"Предложения о сотрудничестве, реклама"
   },
   "calendar": {
     "Today": "Сегодня",
@@ -46,6 +49,7 @@
     "RemoveComment": "Удалить комментарий",
     "Add": "Добавить",
     "Remove": "Удалить",
-    "Save": "Сохранить"
+    "Save": "Сохранить",
+    "default": "По умолчанию"
   }
 }
