--- a/src/locales/i18n/en_US.json
+++ b/src/locales/i18n/en_US.json
@@ -72,6 +72,7 @@
     "Quantity": "Quantity",
     "Price": "Price",
     "Price_per_coin": "Price per coin",
+    "price_per_coin_swapped": "Price per coin swapped",
     "bought": "Bought",
     "sold": "Sold",
     "swapped": "Swapped",
