--- a/src/locales/i18n/ru_RU.json
+++ b/src/locales/i18n/ru_RU.json
@@ -63,6 +63,7 @@
     "24HCHANGE": "ИЗМЕНЕНИЯ ЗА 24 ЧАСА",
     "changes_chart": "Динамика портфолио <br> График",
     "name": "название",
+    "date": "дата",
     "Amount": "Количество",
     "24change": "24 изменения",
     "Total_Value": "Общая Стоимость",
@@ -71,6 +72,7 @@
     "Operation": "Операция",
     "Quantity": "Количество",
     "Price": "Цена",
+    "Current_price": "Текущая цена",
     "Price_per_coin": "Цена за монету",
     "price_per_coin_swapped": "Цена за обменную монету",
     "bought": "Покупка",
@@ -89,6 +91,10 @@
     "remove_operation": "Удалить операцию",
     "remove_coin": "Вы уверены, что хотите удалить {ticker} из вашего портфолио? История всех операций будет потеряна.",
     "remove_coin_short": "Удалить монету",
-    "change_history": "История изменений"
+    "change_history": "История изменений",
+    "Stats": "Статистика",
+    "Based_on_added": "Основанно на добавленных",
+    "since_last_week": "С Последней недели",
+    "since_last_month": "С Последнего месяца"
   }
 }
