--- a/src/locales/i18n/ru_RU.json
+++ b/src/locales/i18n/ru_RU.json
@@ -71,6 +71,7 @@
     "24H_Volume": "Суточный оборот",
     "Operation": "Операция",
     "Quantity": "Количество",
+    "Volume": "Объем",
     "Price": "Цена",
     "Current_price": "Текущая цена",
     "Price_per_coin": "Цена за монету",
@@ -86,6 +87,7 @@
     "Buy": "Купить",
     "Sell": "Продать",
     "Change": "Обменять",
+    "Exchange": "Обмен",
     "coin": "Монета",
     "IN": "В",
     "remove_operation": "Удалить операцию",
