--- a/src/locales/i18n/en_US.json
+++ b/src/locales/i18n/en_US.json
@@ -71,6 +71,7 @@
     "24H_Volume": "24H Volume",
     "Operation": "Operation",
     "Quantity": "Quantity",
+    "Volume": "Volume",
     "Price": "Price",
     "Current_price": "Current price",
     "Price_per_coin": "Price per coin",
@@ -86,6 +87,7 @@
     "Buy": "Buy",
     "Sell": "Sell",
     "Change": "Change",
+    "Exchange": "Exchange",
     "coin": "Coin",
     "IN": "IN",
     "remove_operation": "Remove operation",
